@@ -2,6 +2,7 @@
 HEAD
 ====
 - TEE: do rechecksumming in PREROUTING too
+- TEE: decrease TTL on cloned packet
 
 
 Xtables-addons 1.24 (March 17 2010)
